@@ -13,7 +13,7 @@ from .formatting import HelpFormatter, join_options
 from .parser import OptionParser, split_opt
 from .globals import push_context, pop_context
 
-from ._compat import PY2, isidentifier, iteritems, get_os_args
+from ._compat import PY2, isidentifier, iteritems
 from ._unicodefun import _check_for_unicode_literals, _verify_python3_env
 
 
@@ -1712,3 +1712,4 @@ class Argument(Parameter):
 
 # Circular dependency between decorators and core
 from .decorators import command, group
+from .utils import get_os_args
